tests/should_fail/struct_pattern_on_non_struct.nv
module fail_struct_pat_wrong_type
struct Point { x: Int, y: Int }
let n = 42
match n {
    Point { x, y } => println(x),
    _ => println("miss")
}
